# Sober-AntiAFK

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: backend.rs  main.rs  state.rs  ui.rs
src/inputs/: mod.rs  niri.rs
