[package]
name = "AntiAFK-RBX-Sober"
version = "0.2.1"
edition = "2024"
description = "AntiAFK application for Sober (Roblox for Linux) on Linux"
repository = "https://github.com/aneek0/Sober-AntiAFK"
license = "MIT"
keywords = ["roblox", "linux", "antiafk", "sober", "hyprland"]

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
glib = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.12"
ksni = "0.2.2"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
notify-rust = "4.11"
dirs = "5.0"
nix = "0.23"

[package.metadata.appimage]
name = "AntiAFK-RBX-Sober"
icon = "assets/logo.png"
desktop_entry = "dev.agzes.antiafk-rbx-sober.desktop"
auto_link = true
category = "Utility"